# google-ads-mcp-complete

./: CLAUDE.md  pyproject.toml  start_mcp.sh
campaigns/: cura_headache_campaigns.json  cura_website_sitemap.md
reviews/: 2026-02-25-campaign-review.md
src/: auth.py  server.py  tools.py  tools_ad_groups.py  tools_ads.py  tools_assets.py  tools_audiences.py  tools_bidding.py  tools_budgets.py  tools_campaigns.py  tools_complete.py  tools_extensions.py  tools_geography.py  tools_keywords.py  tools_reporting.py  validation.py
